# obs2mpas

./: CMakeLists.txt  README.md
goes2mpas/: goes_abi_mod.F90  main.F90  read_write_mpas_mod.F90
himawari2mpas/: CMakeLists.txt  himawari_ahi_mod.F90  main.F90  netcdf_mod.f90  setvar.F90
src/: CMakeLists.txt  goes_abi_mod.F90  himawari_ahi_mod.F90  main.F90  netcdf_mod.f90  read_write_mpas_mod.F90  setvar.F90  utils_mod.F90
test/abi/: flist.txt_g18  namelist.obs2model  namelist.obs2model_for10kmMPASformat  namelist.obs2model_forMPASformat  namelist.obs2mpas_forIODAformat  namelist.obs2mpas_g18  qsub.csh
test/ahi/: flist.txt  flist.txt_H08  flist.txt_H08_NC  flist.txt_H08_S0110  flist.txt_H09  flist.txt_H09_S0110  flist.txt_for10kmMPASformat  flist.txt_for10kmMPASformat_2025060918  flist.txt_long  mpas_iodav1.nc  namelist.obs2model  namelist.obs2model_H08  namelist.obs2model_H08_NC  namelist.obs2model_H09  namelist.obs2model_H09_S0110  namelist.obs2model_for10kmMPASformat  namelist.obs2model_forIODAformat  namelist.obs2model_forMPASformat  namelist.obs2mpas  namelist.obs2mpas_H08_S0110  namelist.obs2mpas_for10kmMPASformat_2025060918  plot.py  plot_L2.py
test/ahi/cm/: namelist.obs2model_forMPASformat  obs2mpas.x
test/ahi/radiances/: flist.txt  fort.15  namelist.obs2model  obs2mpas.x
test/ahi/radiances/sub/: fort.15  namelist.obs2model  obs2mpas.x
test_abi_read/: flist.txt  flist.txt_for10kmIODAformat  namelist.obs2model  namelist.obs2model_for10kmIODAformat  namelist.obs2model_for10kmMPASformat  namelist.obs2model_forIODAformat  namelist.obs2model_forMPASformat
test_ahi_read/: flist.txt  namelist.obs2model
